# GameEngine

./: .aiignore  .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  GameEngine.sln
Code/: GameEngine.sln
Code/Application/: CMakeLists.txt
Code/Application/include/Application/: LogApplication.h
Code/Application/src/: LogApplication.cpp  Win32Application.cpp
Code/Core/: CMakeLists.txt  Core.natvis  Core.vcxproj  Core.vcxproj.filters
Code/Core/include/Core/: API.h  Definitions.h  Helpers.h
Code/Core/include/Core/Algorithm/: Algorithm.h
Code/Core/include/Core/Allocator/: Allocator.h  ArenaAllocator.h  ArenaStackAllocator.h  GlobalAllocator.h
Code/Core/include/Core/Assert/: Assert.h
Code/Core/include/Core/Concepts/: Concepts.h
Code/Core/include/Core/Container/: FlatMap.h  Span.h  String.h  Vector.h
Code/Core/include/Core/Functional/: Delegate.h
Code/Core/include/Core/Hash/: Hash.h
Code/Core/include/Core/Iterator/: ContiguousIterator.h
Code/Core/include/Core/Logging/: Logging.h
Code/Core/include/Core/Logging/Private/: CoreLogging.h
Code/Core/include/Core/Platform/: Platform.cpp  Platform.h
Code/Core/include/Core/Reflection/: Reflection.h
Code/Core/src/: StaticInit.cpp
Code/Core/src/Allocator/: GlobalAllocator.cpp
Code/Core/src/Hash/: Hash.cpp
Code/Core/src/Logging/: CoreLogging.cpp  Logging.cpp
Code/Core/src/Platform/: Platform.cpp
Code/Core/tests/: CMakeLists.txt  Main.cpp
Code/Core/tests/src/Allocator/: TestsGlobalAllocator.cpp
Code/Core/tests/src/Container/: TestStringView.cpp  TestVector.cpp
Code/Engine/: CMakeLists.txt
Code/Engine/include/Engine/: API.h
Code/Engine/include/Engine/Components/: ComponentBase.h  SpriteComponent.h  TransformComponent.h
Code/Engine/include/Engine/Entities/: ActorBase.h
Code/Engine/include/Engine/Events/: EventBase.h  EventHook.h
Code/Engine/include/Engine/Events/ECS/: ComponentAttached.h  ComponentDetached.h
Code/Engine/include/Engine/Events/Input/: InputEvents.h
Code/Engine/include/Engine/Events/Renderer/: EventResizeWindow.h
Code/Engine/include/Engine/GameEngine/: GameEngine.h
Code/Engine/include/Engine/Interfaces/: GameEngine.h  IEnvironment.h  SubSystem.h
Code/Engine/include/Engine/Private/: LogEngine.h
Code/Engine/include/Engine/Reflection/: Reflection.h
Code/Engine/include/Engine/Serialization/: Serialization.h
Code/Engine/include/Engine/SubSystems/: EngineSubSystem.h  SubSystem.h  SubSystemRegistration.h
Code/Engine/include/Engine/SubSystems/ECS/: EntityComponentSubSystem.h
Code/Engine/include/Engine/SubSystems/Input/: InputSubSystem.h
Code/Engine/include/Engine/SubSystems/Input/Base/: Translator.h
Code/Engine/include/Engine/SubSystems/Renderer/: RendererSubSystem.h
Code/Engine/include/Engine/SubSystems/Rendering/: RenderingSubSystem.h
Code/Engine/src/: Environment.cpp  EventBase.cpp  EventsMetadata.cpp  GameEngine.cpp  LogCategories.cpp  LogEngine.cpp  SubSystem.cpp
Code/Engine/src/Components/: ComponentBase.cpp  SpriteComponent.cpp  TransformComponent.cpp
Code/Engine/src/Entities/: ActorBase.cpp
Code/Engine/src/Events/: EventHook.cpp
Code/Engine/src/Reflection/: Reflection.cpp
Code/Engine/src/SubSystems/ECS/: EntityComponentSubSystem.cpp
Code/Engine/src/SubSystems/Input/: InputSubSystem.cpp
Code/Engine/src/SubSystems/Input/Base/: Win32Translator.cpp
Code/Engine/src/SubSystems/Renderer/: RendererSubSystem.cpp  RenderingSubSystem.cpp
Code/Engine/src/SubSystems/Rendering/: RenderingSubSystem.cpp
Code/Engine/src/include/Engine/: LogEntitySystem.h  LogInput.h  LogRenderer.h
Code/Engine/src/include/Engine/SubSystems/: Globals.h
Code/Input/: CMakeLists.txt
Code/Input/include/Input/: API.h
Code/Input/include/Input/Base/: Events.h  Translator.h
Code/Input/src/Base/: Win32Translator.cpp
Code/Math/: CMakeLists.txt
Code/Math/include/Math/: Vector.h
Code/Math/src/: Vector.cpp
Code/Physics/: CMakeLists.txt
Code/Physics/include/Physics/: API.h
Code/Physics/include/Physics/Collisions/: AABB.h
Code/Physics/include/Physics/Private/: LogPhysics.h
Code/Physics/src/: AABB.cpp  LogPhysics.cpp
Code/Physics/tests/: CMakeLists.txt  Main.cpp
Code/Physics/tests/Collisions/: TestAABB.cpp
Code/Render/: CMakeLists.txt
Code/Render/include/Render/: API.h  RenderingSystem.h
Code/Render/include/Render/Private/: LogRender.h  OpenGL_Helpers.h
Code/Render/include/Render/Renderable/: Renderable.h
Code/Render/include/Render/Shaders/: Shaders.h  VertexShader.h
Code/Render/src/: LogRender.cpp  Renderable.cpp  RenderingSystem.cpp  Shaders.cpp
Code/Shared/: CMakeLists.txt
Code/Shared/include/Shared/: API.h
Code/Shared/include/Shared/Events/: EventBase.h
Code/Shared/include/Shared/Interfaces/: IEnvironment.h  IGameEngine.h  ISubSystem.h
Code/Shared/src/: EventBase.cpp  IEnvironment.cpp
Code/UnitTestFramework/: CMakeLists.txt  UnitTestFramework.vcxproj  UnitTestFramework.vcxproj.filters
Code/UnitTestFramework/include/UnitTest/: UnitTest.h
Code/UnitTestFramework/src/: UnitTest.cpp
Core/: AssertionMacros.hpp  BuildConfig.hpp  Core.hpp  Core.vcxproj  Core.vcxproj.filters  Export.hpp  LoggerManager.hpp  Logging.hpp  LoggingLevels.hpp  Platform.hpp
CrashHandler/: CrashHandler.vcxproj  main.cpp
CrashHandlerExecutable/: CrashHandlerExecutable.vcxproj  main.cpp
CrashHandlerInterop/: CrashHandlerInterop.cpp  CrashHandlerInterop.hpp  CrashHandlerInterop.vcxproj  CrashHandlerInterop.vcxproj.filters
Input/: EventTypes.hpp  Input.vcxproj  Input.vcxproj.filters  InputHandler.hpp  InputManager.hpp
InputTest/: InputTest.vcxproj  InputTest.vcxproj.filters  TestInputManager.cpp
Launcher/: Launcher.vcxproj  Launcher.vcxproj.filters  main.cpp
LauncherGame/: LauncherGame.vcxproj  LauncherGame.vcxproj.filters  Main.cpp
LauncherTest/: LauncherTest.vcxproj  LauncherTest.vcxproj.filters  TestCommandLineParser.cpp
PrecompiledMain/: PrecompiledMain.vcxproj  main.cpp
Renderer/: Adapter.hpp  Engine.hpp  Output.hpp  RHI.hpp  Renderer.vcxproj  Renderer.vcxproj.filters  Vendor.hpp
RendererExperiment/: main.cpp  (+1 more)
(+49 files in other folders)
